# PydanticTracking

./: .gitignore  Makefile  README.md  README_de.md  pyproject.toml
.github/workflows/: python-package.yml
doc/: concept.md  konzept.md  states.txt
examples/: example1.py
src/pydantic_tracking/: __init__.py  containers.py  mixin.py
tests/: test_hooks.py  test_redis.py  test_tracking.py
