[project]
name = "pydantic-tracking"
description = "Dirty tracking and onchange hooks for Pydantic models"
authors = [
  { name="Rüdiger Kessel", email="ruediger.kessel@gmail.com" },
]
dependencies = ["pydantic>=2.0"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/hfr/PydanticTracking/"
Issues = "https://github.com/hfr/PydanticTracking/issues"

[tool.hatch.envs.default]
dependencies = [
  "ruff",
  "pytest",
  "coverage"
]

[project.optional-dependencies]
build = ["hatch"]
test = [
  "redis-om"
]

[tool.hatch.envs.default.scripts]
test = "pytest"

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = ["tests/data", "docs"]
lint.select = ["E", "F", "I", "UP", "N", "B"]
lint.ignore = ["E501"]  # z.B. Zeilenlänge ignorieren

[tool.hatch.version]
path = "src/pydantic_tracking/__init__.py"

[[tool.hatch.envs.test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.test]
dependencies = [
  "redis-om"
]

